# restful-api-with-actix-web

./: Dockerfile  README.md  docker-compose.yml  memo.md  post.sh  sample_data.md  sample_data.txt
.devcontainer/: devcontainer.json
app/: .env  Cargo.toml
app/migrations/2022-05-03-102050_todo/: down.sql  up.sql
app/src/: logger.rs  main.rs  model.rs  schema.rs
app/src/api/: delete_api.rs  get_api.rs  mod.rs  post_api.rs  put_api.rs
app/src/util/: db.rs  logger.rs  mod.rs
